--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "csrf": "^3.1.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "firebase-functions-test": "^0.2.3"
   },
   "private": true
