--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -5,6 +5,13 @@
     "browser": true
   },
   "rules": {
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
     "no-unused-vars": "warn",
     "no-var": "off",
     "one-var": [
@@ -14,6 +21,8 @@
     "no-console": "off",
     "consistent-return": "off",
     "prefer-destructuring": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "arrow-parens": "off",
+    "one-var-declaration-per-line": "off"
   }
 }
